--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -56,7 +56,7 @@
     .header {
         flex-direction: column;
         height: auto; /* Adaptation de la hauteur */
-        padding: 5px 10px;
+        padding: 5px;
     }
 
     /* Masquer la photo et le logo LinkedIn sur mobile */
