--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -61,4 +61,7 @@
         flex-direction: column; /* Affichage en colonne sur mobile */
         gap: 20px;
     }
+    .skills-section {
+        padding-top: 100px; /* Augmente le padding en haut pour mobile */
+    }
 }
